force-app/main/default/objects/custom_create165__c/custom_create165__c.object-meta.xml
<CustomObject>
    <label>Custom created object165</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects165</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>