force-app/main/default/objects/custom_create165__c/fields/custom_create_165field501__c.field-meta.xml
<CustomField>
    <fullName>custom_create_165field501__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 165field501</label>
    <type>Checkbox</type>
</CustomField>